5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1716_2505.log
== TEST (2019-05-14 16:37:06) 
-- CODE:
from math import *
x = eval(input('Angulo: '))
k = int(input('NTermos: '))

c = 1
s = -1
r = x
e = 3

while (c<k):
	r = r+(s*(x**e/factorial(e)))
	s = s*(-1)
	e = e+2
	c += 1
print(round(soma, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(round(soma, 10))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:52) 
-- CODE:
from math import *
x = eval(input('Angulo: '))
k = int(input('NTermos: '))

c = 1
s = -1
r = x
e = 3

while (c<k):
	r = r+(s*(x**e/factorial(e)))
	s = s*(-1)
	e = e+2
	c += 1
print(round(s, 10))
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:30) 
-- CODE:
from math import *
x = eval(input('Angulo: '))
k = int(input('NTermos: '))

c = 1
s = -1
r = x
e = 3

while (c<k):
	r = r+(s*(x**e/factorial(e)))
	s = s*(-1)
	e = e+2
	c += 1
print(round(s, 10))
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:41) 
-- CODE:
from math import *
x = eval(input('Angulo: '))
k = int(input('NTermos: '))

c = 1
s = -1
r = x
e = 3

while (c<k):
	r = r+(s*(x**e/factorial(e)))
	s = s*(-1)
	e = e+2
	c += 1
print(round(r, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:38:50) 
-- CODE:
from math import *
x = eval(input('Angulo: '))
k = int(input('NTermos: '))

c = 1
s = -1
r = x
e = 3

while (c<k):
	r = r+(s*(x**e/factorial(e)))
	s = s*(-1)
	e = e+2
	c += 1
print(round(r, 10))
-- EXECUTION TIME:
0.131539
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
